force-app/main/default/objects/Apttus_Config2__DatedExchangeRate__c/Apttus_Config2__DatedExchangeRate__c.object-meta.xml
<CustomObject>
    <description>Holds dated currency exchange rates</description>
    <label>Dated Exchange Rate</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Dated Exchange Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dated Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>