force-app/main/default/objects/Apttus_Config2__DatedExchangeRate__c/fields/Apttus_Config2__ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConversionRate__c</fullName>
    <description>The exchange rate</description>
    <inlineHelpText>The exchange rate</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>