force-app/main/default/objects/Apttus_Config2__DatedExchangeRate__c/fields/Apttus_Config2__CurrencyCodeInternal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CurrencyCodeInternal__c</fullName>
    <description>Currency Code for Internal Use</description>
    <externalId>true</externalId>
    <inlineHelpText>Currency Code for Internal Use</inlineHelpText>
    <label>Currency Code (Internal)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>