force-app/main/default/objects/Apttus_Config2__DatedExchangeRate__c/fields/Apttus_Config2__NextStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NextStartDate__c</fullName>
    <description>The next exchange period date</description>
    <inlineHelpText>The next exchange period date</inlineHelpText>
    <label>Next Start Date</label>
    <type>Date</type>
</CustomField>