force-app/main/default/objects/Apttus_Config2__DatedExchangeRate__c/fields/Apttus_Config2__RateType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RateType__c</fullName>
    <description>The exchange rate type</description>
    <inlineHelpText>The exchange rate type</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Period End Rate</fullName>
                <default>true</default>
                <label>Period End Rate</label>
            </value>
            <value>
                <fullName>Period Average Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>